--- a/cmd/ef_tests/blockchain/Cargo.toml
+++ b/cmd/ef_tests/blockchain/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ef_tests-ethrex"
+name = "ef_tests-blockchain"
 version.workspace = true
 edition.workspace = true
 
@@ -18,7 +18,7 @@ lazy_static.workspace = true
 datatest-stable = "0.2.9"
 
 [lib]
-path = "./ef_tests.rs"
+path = "./lib.rs"
 
 [[test]]
 name = "cancun"
