--- a/cmd/ef_tests/blockchain/Cargo.toml
+++ b/cmd/ef_tests/blockchain/Cargo.toml
@@ -8,6 +8,7 @@ ethrex-blockchain.workspace = true
 ethrex-core.workspace = true
 ethrex-storage.workspace = true
 ethrex-rlp.workspace = true
+ethrex-vm.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 bytes.workspace = true
