Refactor tmp dir.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ debug/
 *.pdb
 
 cmd/ef_tests/blockchain/vectors
+cmd/ef_tests/blockchain/tmp
+
 cmd/ef_tests/levm/vectors
 
 # Repos checked out by make target
