--- a/cmd/ef_tests/blockchain/Makefile
+++ b/cmd/ef_tests/blockchain/Makefile
@@ -3,6 +3,7 @@
 FIXTURES_FILE := .fixtures_url
 SPECTEST_ARTIFACT := tests.tar.gz
 SPECTEST_VECTORS_DIR := vectors
+TMP_DIR := tmp
 
 SPECTEST_URL := $(shell cat $(FIXTURES_FILE))
 
@@ -11,16 +12,18 @@ $(SPECTEST_ARTIFACT): $(FIXTURES_FILE)
 	curl -L -o $(SPECTEST_ARTIFACT) $(SPECTEST_URL)
 
 $(SPECTEST_VECTORS_DIR): $(SPECTEST_ARTIFACT)
-	mkdir -p $(SPECTEST_VECTORS_DIR) tmp
-	tar -xzf $(SPECTEST_ARTIFACT) -C tmp
+	mkdir -p $(SPECTEST_VECTORS_DIR) $(TMP_DIR)
+	tar -xzf $(SPECTEST_ARTIFACT) -C $(TMP_DIR)
 	rm -rf $(SPECTEST_VECTORS_DIR)/*
-	mv tmp/fixtures/blockchain_tests/* $(SPECTEST_VECTORS_DIR)
+	mv $(TMP_DIR)/fixtures/blockchain_tests/* $(SPECTEST_VECTORS_DIR)
+	rm -rf $(TMP_DIR)
 
 download-test-vectors: $(SPECTEST_VECTORS_DIR) ## 📥 Download test vectors
 
 clean-vectors: ## 🗑️  Clean test vectors
 	rm -rf $(SPECTEST_VECTORS_DIR)
 	rm -f $(SPECTEST_ARTIFACT)
+	rm -rf $(TMP_DIR)
 
 test: $(SPECTEST_VECTORS_DIR) ## 🧪 Run blockchain tests
 	cargo test
