--- a/crates/vm/levm/bench/revm_comparison/Cargo.toml
+++ b/crates/vm/levm/bench/revm_comparison/Cargo.toml
@@ -20,6 +20,7 @@ revm = "9.0.0"
 sha3 = "0.10.8"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
 bincode = "1.3.3"
+clap = { version = "4.5.21", features = ["derive"] }
 
 [[bin]]
 name = "compile"
