--- a/crates/networking/rpc/Cargo.toml
+++ b/crates/networking/rpc/Cargo.toml
@@ -17,7 +17,7 @@ ethrex-core.workspace = true
 ethrex-storage.workspace = true
 ethrex-vm.workspace = true
 ethrex-blockchain.workspace = true
-ethrex-net.workspace = true
+ethrex-p2p.workspace = true
 ethrex-rlp.workspace = true
 hex.workspace = true
 axum-extra = { version = "0.10.0", features = ["typed-header"] }
