--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -41,20 +41,62 @@ jobs:
       - name: Run tests
         run: |
           cd crates/vm/levm
-          make run-evm-ef-tests-ci | tee test_result.txt
+          make run-evm-ef-tests-ci | tee test_result_pr.txt
 
       - name: Show test summary -- full
         run: |
-          cd crates/vm/levm && awk '/Summary: /,0' test_result.txt
+          cd crates/vm/levm && awk '/Summary: /,0' test_result_pr.txt
 
       - name: Show test summary -- short
         run: |
-          cd crates/vm/levm && awk '/Summary: /,/Frontier/' test_result.txt;
+          cd crates/vm/levm && awk '/Summary: /,/Frontier/' test_result_pr.txt;
 
       - name: Check EF-TESTS status is 100%
         run: |
           cd crates/vm/levm
-          if [ "$(awk '/Summary:/ {print $(NF)}' test_result.txt)" != "(100.00%)" ]; then
+          if [ "$(awk '/Summary:/ {print $(NF)}' test_result_pr.txt)" != "(100.00%)" ]; then
+              echo "Percentage is not 100%."
+              # exit 1 # uncomment when we expect 100% pass-rate
+          fi
+
+  ef-test-main:
+    if: ${{ github.event_name != 'merge_group' }}
+    name: EF Tests Check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4
+
+      - name: Rustup toolchain install
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{ env.RUST_VERSION }}
+
+      - name: Caching
+        uses: Swatinem/rust-cache@v2
+
+      - name: Download EF Tests
+        run: |
+          cd crates/vm/levm
+          make download-evm-ef-tests
+
+      - name: Run tests
+        run: |
+          cd crates/vm/levm
+          make run-evm-ef-tests-ci | tee test_result_main.txt
+
+      - name: Show test summary -- full
+        run: |
+          cd crates/vm/levm && awk '/Summary: /,0' test_result_main.txt
+
+      - name: Show test summary -- short
+        run: |
+          cd crates/vm/levm && awk '/Summary: /,/Frontier/' test_result_main.txt;
+
+      - name: Check EF-TESTS status is 100%
+        run: |
+          cd crates/vm/levm
+          if [ "$(awk '/Summary:/ {print $(NF)}' test_result_main.txt)" != "(100.00%)" ]; then
               echo "Percentage is not 100%."
               # exit 1 # uncomment when we expect 100% pass-rate
           fi
