--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -61,7 +61,7 @@ jobs:
 
   ef-test-main:
     if: ${{ github.event_name != 'merge_group' }}
-    name: EF Tests Check
+    name: EF Tests Check main
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
