Change comparison graph

--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -105,7 +105,7 @@ jobs:
 
   compare-ef-tests:
     if: ${{ github.event_name != 'merge_group' }}
-    name: EF Tests Check main
+    name: EF Tests Compare
     needs: [ef-test-main, ef-test]
     runs-on: ubuntu-latest
     steps:
