--- a/crates/l2/prover/bench/Cargo.toml
+++ b/crates/l2/prover/bench/Cargo.toml
@@ -51,3 +51,5 @@ build_risc0 = ["zkvm_interface/build_risc0", "ethrex-prover/build_risc0"]
 gpu = ["ethrex-prover/gpu"]
 ## sp1
 build_sp1 = ["zkvm_interface/build_sp1", "zkvm_interface/build_risc0"]
+
+l2 = ["ethrex-vm/l2"]
