--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
     "crates/common/rlp",
     "cmd/ethrex",
     "cmd/ef_tests/blockchain",
-    "cmd/ef_tests/levm",
+    "cmd/ef_tests/state",
     "cmd/ethrex_l2",
     "cmd/hive_report",
     "crates/vm/levm",
