--- a/cmd/ef_tests/state/Cargo.toml
+++ b/cmd/ef_tests/state/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ef_tests-levm"
+name = "ef_tests-state"
 version.workspace = true
 edition.workspace = true
 
@@ -33,12 +33,8 @@ revm = { version = "18.0.0", features = [
 hex = "0.4.3"
 
 [lib]
-path = "./ef_tests.rs"
-
-[[bin]]
-name = "ef_tests_levm"
-path = "tests/ef_tests_levm.rs"
+path = "./lib.rs"
 
 [[test]]
-name = "ef_tests_levm"
+name = "all"
 harness = false
