--- a/crates/l2/prover/bench/Makefile
+++ b/crates/l2/prover/bench/Makefile
@@ -1,10 +1,10 @@
 .PHONY: sp1
 
 sp1:
-	cargo r -r --features build_sp1 -- --rpc-url ${RPC_URL}
+	SP1_PROVER=local cargo r -r --features build_sp1 -- --rpc-url ${RPC_URL}
 
 sp1-gpu:
-	cargo r -r --features "build_sp1,gpu" -- --rpc-url ${RPC_URL}
+	SP1_PROVER=cuda cargo r -r --features "build_sp1,gpu" -- --rpc-url ${RPC_URL}
 
 risc0:
 	cargo r -r --features build_risc0 -- --rpc-url ${RPC_URL}
