--- a/crates/l2/prover/bench/Cargo.toml
+++ b/crates/l2/prover/bench/Cargo.toml
@@ -46,10 +46,7 @@ lazy_static = "1.5.0"
 bincode = "1.3.3"
 
 [features]
-## risc0
-build_risc0 = ["zkvm_interface/build_risc0", "ethrex-prover/build_risc0"]
+risc0 = ["zkvm_interface/build_risc0", "ethrex-prover/build_risc0"]
+sp1 = ["zkvm_interface/build_sp1", "zkvm_interface/build_sp1"]
 gpu = ["ethrex-prover/gpu"]
-## sp1
-build_sp1 = ["zkvm_interface/build_sp1", "zkvm_interface/build_sp1"]
-
 l2 = ["ethrex-vm/l2"]
