fix: try to fix hive

--- a/.github/workflows/ci_l1.yaml
+++ b/.github/workflows/ci_l1.yaml
@@ -197,6 +197,7 @@ jobs:
         run: |
           docker load --input /tmp/ethrex_image.tar
 
+      # By default ethrex uses revm as evm backend.
       - name: Run Hive Simulation
         run: chmod +x hive && ./hive --client ethrex --sim ${{ matrix.simulation }} --sim.limit "${{ matrix.test_pattern }}" --sim.parallelism 4
 
