Check that tests pass

--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -167,13 +167,27 @@ jobs:
           comment-author: "github-actions[bot]"
           body-includes: "EF Tests Comparison"
 
-      - name: Create or update comment
+      # If we have a failure, means that some ef-tests don't pass.
+      # If the condition is met, create or update the comment with the summary.
+      - name: Create comment
+        if: ${{ steps.check_tests.outcome == 'failure' && github.event_name == 'pull_request' }}
         uses: peter-evans/create-or-update-comment@v4
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
           body-path: crates/vm/levm/ef_tests_comparison.md
+          edit-mode: replace
+
+      - name: Update comment
+        if: ${{ steps.check_tests.outcome != 'failure' && github.event_name == 'pull_request' && steps.fc.outputs.comment-id != '' }}
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          comment-id: ${{ steps.fc.outputs.comment-id }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            Summary: All EF-TESTS pass.
           edit-mode: replace
 
   hive-report-creation:
