--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -155,6 +155,14 @@ jobs:
           name: pr-ef-test-data
           path: crates/vm/levm/
 
+      - name: Compare files
+        run: |
+          cd crates/vm/levm
+          diff test_result_main.txt test_result_pr.txt > diff.txt
+          if [ -s diff.txt ]; then
+              exit 0
+          fi
+
       - name: Compare results
         run: |
           cd crates/vm/levm
