--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -160,6 +160,7 @@ jobs:
           if [ -s diff.txt ]; then
               exit 0
           fi
+          exit 0
 
       - name: Compare results
         run: |
