--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -155,11 +155,14 @@ jobs:
           path: crates/vm/levm/
 
       - name: Compare files
+        id: branch_diffs
+        continue-on-error: true
         run: |
           cd crates/vm/levm
-          diff test_result_main.txt test_result_pr.txt | tee diff.txt
+          diff test_result_main.txt test_result_pr.txt
 
       - name: Compare results
+        if: ${{ steps.branch_diffs.outcome == 'failure' && github.event_name == 'pull_request' }}
         run: |
           cd crates/vm/levm
           bash ../../../.github/scripts/compare_ef_tests.sh test_result_main.txt test_result_pr.txt > ef_tests_comparison.md
@@ -176,6 +179,7 @@ jobs:
       # If we have a failure, means that some ef-tests don't pass.
       # If the condition is met, create or update the comment with the summary.
       - name: Create comment
+        if: ${{ steps.branch_diffs.outcome == 'failure' && github.event_name == 'pull_request' }}
         uses: peter-evans/create-or-update-comment@v4
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
@@ -184,7 +188,11 @@ jobs:
           body-path: crates/vm/levm/ef_tests_comparison.md
           edit-mode: replace
 
+      # If we don't have a failure, means that all ef-tests pass.
+      # If comment-id != '', means that we've already created the comment.
+      # If both conditions are met, update the comment saying that all tests pass.
       - name: Update comment
+        if: ${{ steps.check_tests.outcome != 'failure' && github.event_name == 'pull_request' && steps.fc.outputs.comment-id != '' }}
         uses: peter-evans/create-or-update-comment@v4
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
