--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -50,7 +50,7 @@ jobs:
       - name: Show test summary -- short
         run: |
           cd crates/vm/levm
-          bash ../../../.github/scripts/parse_test_result.sh test_result_pr.txt > test_result_pr_short
+          bash ../../../.github/scripts/parse_test_result.sh test_result_pr.txt > test_result_pr_short.txt
 
       - name: Upload PR branch EF-test results.
         uses: actions/upload-artifact@v4
