--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -202,7 +202,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            "# Summary \n All EF-TESTS pass."
+            "# EF Tests Comparison \n All EF-TESTS pass."
           edit-mode: replace
 
   hive-report-creation:
