--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -159,13 +159,13 @@ jobs:
         continue-on-error: true
         run: |
           cd crates/vm/levm
-          diff test_result_main_short.txt test_result_pr_short.txt
+          diff -q test_result_main_short.txt test_result_pr_short.txt
 
       - name: Compare results
         if: ${{ steps.branch_diffs.outcome == 'failure' && github.event_name == 'pull_request' }}
         run: |
           cd crates/vm/levm
-          bash ../../../.github/scripts/compare_ef_tests.sh test_result_main_short.txt test_result_pr_short.txt > ef_tests_comparison.md
+          bash ../../../.github/scripts/compare_ef_tests.sh test_result_main_short.txt test_result_pr_short.txt | tee ef_tests_comparison.md
 
       - name: Find comment
         continue-on-error: true
