--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -50,7 +50,7 @@ jobs:
       - name: Show test summary -- short
         run: |
           cd crates/vm/levm
-          bash ../../../.github/scripts/parse_test_result.sh test_result_pr.txt > test_result_pr_short.txt
+          bash ../../../.github/scripts/parse_test_result.sh test_result_pr.txt | tee test_result_pr_short.txt
 
       - name: Upload PR branch EF-test results.
         uses: actions/upload-artifact@v4
@@ -116,7 +116,7 @@ jobs:
       - name: Show test summary -- short
         run: |
           cd crates/vm/levm
-          bash ../../../.github/scripts/parse_test_result.sh test_result_main.txt > test_result_main_short.txt
+          bash ../../../.github/scripts/parse_test_result.sh test_result_main.txt | tee test_result_main_short.txt
 
       - name: Upload main branch EF-test results.
         uses: actions/upload-artifact@v4
@@ -159,12 +159,14 @@ jobs:
         continue-on-error: true
         run: |
           cd crates/vm/levm
-          diff -q test_result_main_short.txt test_result_pr_short.txt
+          diff test_result_main_short.txt test_result_pr_short.txt
 
       - name: Compare results
         if: ${{ steps.branch_diffs.outcome == 'failure' && github.event_name == 'pull_request' }}
         run: |
           cd crates/vm/levm
+          cat test_result_main_short.txt
+          cat test_result_pr_short.txt
           bash ../../../.github/scripts/compare_ef_tests.sh test_result_main_short.txt test_result_pr_short.txt | tee ef_tests_comparison.md
 
       - name: Find comment
